# baggage_system

./: .dockerignore  .env.example  .gitignore  CHECKLIST.md  CMakeLists.txt  DOCKER.md  DOCKER_SETUP.md  DOCUMENTATION.md  Dockerfile  FINAL_STATUS.txt  QUICKSTART.md  README.md  README_SETUP.md  README_ДЛЯ_ОДНОГРУППНИКА.md  SUMMARY.md  TESTING.md  TEST_INSTRUCTIONS.md  TEST_REPORT.md  TRANSFER.md  docker-compose.yml  init-db.sql  run-local.sh  run.sh  ЗАПУСК_DOCKER.md
include/: AddRecordDialog.h  BaggageManager.h  BaggageRecord.h  ChangeItemsDialog.h  DatabaseManager.h  DateRangeReportDialog.h  DeleteByFlightDialog.h  FilterDialog.h  LoginDialog.h  MainWindow.h
resources/: styles.qss
src/: AddRecordDialog.cpp  BaggageManager.cpp  BaggageRecord.cpp  ChangeItemsDialog.cpp  DatabaseManager.cpp  DateRangeReportDialog.cpp  DeleteByFlightDialog.cpp  FilterDialog.cpp  LoginDialog.cpp  MainWindow.cpp  main.cpp
